# cellpose-local

./: README.md  czi2tiff.py  pyproject.toml  run_cellpose_2D.bat
